@@ -12,6 +12,7 @@
     refresh now refreshes all tabs open to dir #582
     new run-task socket task type refresh to refresh tabs or dirs #582
     current device name and more total size info in status bar #582
+    [desktop] show video thumbnails on desktop
 1.0.4   2015-10-17:
     new spacefm-installer replaces self-extrct and install #571
     README rewritten and manual updated for new installer #571
